TigertronCompiler/SintaxAnalysis/TigerParser.cs
// $ANTLR 3.3 Nov 30, 2010 12:45:30 C:\\Users\\Gustavo\\Desktop\\Tiger.g 2012-02-26 18:17:22

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 219
// Unreachable code detected.
#pragma warning disable 162


  using TigertronCompiler.ErrorHandling;


using System.Collections.Generic;
using Antlr.Runtime;
using Stack = System.Collections.Generic.Stack<object>;
using List = System.Collections.IList;
using ArrayList = System.Collections.Generic.List<object>;
using Map = System.Collections.IDictionary;
using HashMap = System.Collections.Generic.Dictionary<object, object>;

using Antlr.Runtime.Tree;
using RewriteRuleITokenStream = Antlr.Runtime.Tree.RewriteRuleTokenStream;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.3 Nov 30, 2010 12:45:30")]
[System.CLSCompliant(false)]
public partial class TigerParser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "KW_ARRAY", "KW_BREAK", "KW_DO", "KW_ELSE", "KW_END", "KW_FOR", "KW_FUNCTION", "KW_IF", "KW_IN", "KW_LET", "KW_NIL", "KW_OF", "KW_THEN", "KW_TO", "KW_TYPE", "KW_VAR", "KW_WHILE", "POINT", "COMMA", "COLON", "SEMICOLON", "OPEN_BRACE", "CLOSE_BRACE", "OPEN_BRACKET", "CLOSE_BRACKET", "OPEN_PARENTHESIS", "CLOSE_PARENTHESIS", "ASSIGN_OP", "PLUS_OP", "MINUS_OP", "MULT_OP", "DIV_OP", "AND_OP", "OR_OP", "EQUAL_OP", "DISTINCT_OP", "LESS_THAN_OP", "LESS_THAN_EQUAL_OP", "GREATER_THAN_OP", "GREATER_THAN_EQUAL_OP", "UNARY_MINUS_OP", "EXPRESSION_SEQ_INSTR_NODE", "IDENTIFIER_NODE", "IDENTIFIER_NAME", "CALL_FUNCTION_NODE", "FUNCTION_NAME", "RECORD_CREATION_NODE", "FIELD_ASSIGN", "FIELD_ASSIGN_LIST", "ARRAY_CREATION_NODE", "FIELD_ACCES", "SUBSCRIPT_ACCES", "PARAMETERS_CALL", "IF_THEN_NODE", "IF_THEN_ELSE_NODE", "LET_INSTRUCTION_NODE", "EXPR_SEQ_NODE", "DECLARATION_LIST_NODE", "ALIAS_TYPE_DEC_NODE", "ARRAY_TYPE_DEC_NODE", "RECORD_TYPE_DEC_NODE", "FIELDS_RECORD", "INFERENCED_TYPE_VAR_DEC_NODE", "DEFINED_TYPE_VAR_DEC_NODE", "PROCEDURE_DECLARATION_NODE", "FUNCTION_DECLARATION_NODE", "PARAMETERS_DEC", "FIELD_DECLARATION_NODE", "BLOCK_TYPE_DECL", "BLOCK_VAR_DECL", "BLOCK_FUNC_DECL", "LETTER", "DIGIT", "IDENTIFIER", "WS", "COMMENT", "INT_CONSTANT", "DOUBLE_QUOTE", "ESC_SEQ", "BACK_SLASH", "STRING_CONSTANT"
	};
	public const int EOF=-1;
	public const int KW_ARRAY=4;
	public const int KW_BREAK=5;
	public const int KW_DO=6;
	public const int KW_ELSE=7;
	public const int KW_END=8;
	public const int KW_FOR=9;
	public const int KW_FUNCTION=10;
	public const int KW_IF=11;
	public const int KW_IN=12;
	public const int KW_LET=13;
	public const int KW_NIL=14;
	public const int KW_OF=15;
	public const int KW_THEN=16;
	public const int KW_TO=17;
	public const int KW_TYPE=18;
	public const int KW_VAR=19;
	public const int KW_WHILE=20;
	public const int POINT=21;
	public const int COMMA=22;
	public const int COLON=23;
	public const int SEMICOLON=24;
	public const int OPEN_BRACE=25;
	public const int CLOSE_BRACE=26;
	public const int OPEN_BRACKET=27;
	public const int CLOSE_BRACKET=28;
	public const int OPEN_PARENTHESIS=29;
	public const int CLOSE_PARENTHESIS=30;
	public const int ASSIGN_OP=31;
	public const int PLUS_OP=32;
	public const int MINUS_OP=33;
	public const int MULT_OP=34;
	public const int DIV_OP=35;
	public const int AND_OP=36;
	public const int OR_OP=37;
	public const int EQUAL_OP=38;
	public const int DISTINCT_OP=39;
	public const int LESS_THAN_OP=40;
	public const int LESS_THAN_EQUAL_OP=41;
	public const int GREATER_THAN_OP=42;
	public const int GREATER_THAN_EQUAL_OP=43;
	public const int UNARY_MINUS_OP=44;
	public const int EXPRESSION_SEQ_INSTR_NODE=45;
	public const int IDENTIFIER_NODE=46;
	public const int IDENTIFIER_NAME=47;
	public const int CALL_FUNCTION_NODE=48;
	public const int FUNCTION_NAME=49;
	public const int RECORD_CREATION_NODE=50;
	public const int FIELD_ASSIGN=51;
	public const int FIELD_ASSIGN_LIST=52;
	public const int ARRAY_CREATION_NODE=53;
	public const int FIELD_ACCES=54;
	public const int SUBSCRIPT_ACCES=55;
	public const int PARAMETERS_CALL=56;
	public const int IF_THEN_NODE=57;
	public const int IF_THEN_ELSE_NODE=58;
	public const int LET_INSTRUCTION_NODE=59;
	public const int EXPR_SEQ_NODE=60;
	public const int DECLARATION_LIST_NODE=61;
	public const int ALIAS_TYPE_DEC_NODE=62;
	public const int ARRAY_TYPE_DEC_NODE=63;
	public const int RECORD_TYPE_DEC_NODE=64;
	public const int FIELDS_RECORD=65;
	public const int INFERENCED_TYPE_VAR_DEC_NODE=66;
	public const int DEFINED_TYPE_VAR_DEC_NODE=67;
	public const int PROCEDURE_DECLARATION_NODE=68;
	public const int FUNCTION_DECLARATION_NODE=69;
	public const int PARAMETERS_DEC=70;
	public const int FIELD_DECLARATION_NODE=71;
	public const int BLOCK_TYPE_DECL=72;
	public const int BLOCK_VAR_DECL=73;
	public const int BLOCK_FUNC_DECL=74;
	public const int LETTER=75;
	public const int DIGIT=76;
	public const int IDENTIFIER=77;
	public const int WS=78;
	public const int COMMENT=79;
	public const int INT_CONSTANT=80;
	public const int DOUBLE_QUOTE=81;
	public const int ESC_SEQ=82;
	public const int BACK_SLASH=83;
	public const int STRING_CONSTANT=84;

	// delegates
	// delegators

	#if ANTLR_DEBUG
		private static readonly bool[] decisionCanBacktrack =
			new bool[]
			{
				false, // invalid decision
				false, false, false, false, false, true, false, false, false, false, 
				false, false, false, false, false, false, false, false, false, false, 
				true, false, false, false, false, false, false, false, false, false, 
				false, false, false, false
			};
	#else
		private static readonly bool[] decisionCanBacktrack = new bool[0];
	#endif
	public TigerParser( ITokenStream input )
		: this( input, new RecognizerSharedState() )
	{
	}
	public TigerParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{
		ITreeAdaptor treeAdaptor = null;
		CreateTreeAdaptor(ref treeAdaptor);
		TreeAdaptor = treeAdaptor ?? new CommonTreeAdaptor();

		OnCreated();
	}
		
	// Implement this function in your helper file to use a custom tree adaptor
	partial void CreateTreeAdaptor(ref ITreeAdaptor adaptor);

	private ITreeAdaptor adaptor;

	public ITreeAdaptor TreeAdaptor
	{
		get
		{
			return adaptor;
		}
		set
		{
			this.adaptor = value;
		}
	}

	public override string[] TokenNames { get { return TigerParser.tokenNames; } }
	public override string GrammarFileName { get { return "C:\\Users\\Gustavo\\Desktop\\Tiger.g"; } }


	    public List<Error> Errors = new List<Error>();
	    public override string GetErrorMessage(RecognitionException e, string[] tokenNames)
	    {
	        string infoError = base.GetErrorMessage(e, tokenNames);
	        Errors.Add(new Error(infoError, e.Line, e.CharPositionInLine,ErrorKind.SyntaxError));
	        return infoError;
	    }


	partial void OnCreated();
	partial void EnterRule(string ruleName, int ruleIndex);
	partial void LeaveRule(string ruleName, int ruleIndex);

	#region Rules
	public class tiger_program_return : ParserRuleReturnScope<IToken>, IAstRuleReturnScope<CommonTree>
	{
		private CommonTree _tree;
		public CommonTree Tree { get { return _tree; } set { _tree = value; } }
	}

	partial void Enter_tiger_program();
	partial void Leave_tiger_program();

	// $ANTLR start "tiger_program"
	// C:\\Users\\Gustavo\\Desktop\\Tiger.g:224:1: tiger_program : expression EOF ;
	[GrammarRule("tiger_program")]
	public TigerParser.tiger_program_return tiger_program()
	{
		Enter_tiger_program();
		EnterRule("tiger_program", 1);
		TraceIn("tiger_program", 1);
		TigerParser.tiger_program_return retval = new TigerParser.tiger_program_return();
		retval.Start = (IToken)input.LT(1);

		CommonTree root_0 = null;

		IToken EOF2=null;
		TigerParser.expression_return expression1 = default(TigerParser.expression_return);

		CommonTree EOF2_tree=null;

		try { DebugEnterRule(GrammarFileName, "tiger_program");
		DebugLocation(224, 18);
		try
		{
			// C:\\Users\\Gustavo\\Desktop\\Tiger.g:233:2: ( expression EOF )
			DebugEnterAlt(1);
			// C:\\Users\\Gustavo\\Desktop\\Tiger.g:233:4: expression EOF
			{
			root_0 = (CommonTree)adaptor.Nil();

			DebugLocation(233, 4);
			PushFollow(Follow._expression_in_tiger_program1152);
			expression1=expression();
			PopFollow();
			if (state.failed) return retval;
			if ( state.backtracking == 0 ) adaptor.AddChild(root_0, expression1.Tree);
			DebugLocation(233, 18);
			EOF2=(IToken)Match(input,EOF,Follow._EOF_in_tiger_program1154); if (state.failed) return retval;

			}

			retval.Stop = (IToken)input.LT(-1);

			if ( state.backtracking == 0 ) {

			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("tiger_program", 1);
			LeaveRule("tiger_program", 1);
			Leave_tiger_program();
		}
		DebugLocation(233, 18);
		} finally { DebugExitRule(GrammarFileName, "tiger_program"); }
		return retval;

	}
	// $ANTLR end "tiger_program"

	public class expression_return : ParserRuleReturnScope<IToken>, IAstRuleReturnScope<CommonTree>
	{
		private CommonTree _tree;
		public CommonTree Tree { get { return _tree; } set { _tree = value; } }
	}

	partial void Enter_expression();
	partial void Leave_expression();

	// $ANTLR start "expression"
	// C:\\Users\\Gustavo\\Desktop\\Tiger.g:235:1: expression : disjunction_expr ;
	[GrammarRule("expression")]
	private TigerParser.expression_return expression()
	{
		Enter_expression();
		EnterRule("expression", 2);
		TraceIn("expression", 2);
		TigerParser.expression_return retval = new TigerParser.expression_return();
		retval.Start = (IToken)input.LT(1);

		CommonTree root_0 = null;

		TigerParser.disjunction_expr_return disjunction_expr3 = default(TigerParser.disjunction_expr_return);


		try { DebugEnterRule(GrammarFileName, "expression");
		DebugLocation(235, 20);
		try
		{
			// C:\\Users\\Gustavo\\Desktop\\Tiger.g:236:2: ( disjunction_expr )
			DebugEnterAlt(1);
			// C:\\Users\\Gustavo\\Desktop\\Tiger.g:236:4: disjunction_expr
			{
			root_0 = (CommonTree)adaptor.Nil();

			DebugLocation(236, 4);
			PushFollow(Follow._disjunction_expr_in_expression1165);
			disjunction_expr3=disjunction_expr();
			PopFollow();
			if (state.failed) return retval;
			if ( state.backtracking == 0 ) adaptor.AddChild(root_0, disjunction_expr3.Tree);

			}

			retval.Stop = (IToken)input.LT(-1);

			if ( state.backtracking == 0 ) {

			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("expression", 2);
			LeaveRule("expression", 2);
			Leave_expression();
		}
		DebugLocation(236, 20);
		} finally { DebugExitRule(GrammarFileName, "expression"); }
		return retval;

	}
	// $ANTLR end "expression"

	public class disjunction_expr_return : ParserRuleReturnScope<IToken>, IAstRuleReturnScope<CommonTree>
	{
		private CommonTree _tree;
		public CommonTree Tree { get { return _tree; } set { _tree = value; } }
	}

	partial void Enter_disjunction_expr();
	partial void Leave_disjunction_expr();

	// $ANTLR start "disjunction_expr"
	// C:\\Users\\Gustavo\\Desktop\\Tiger.g:239:1: disjunction_expr : conjunction_expr ( OR_OP conjunction_expr )* ;
	[GrammarRule("disjunction_expr")]
	private TigerParser.disjunction_expr_return disjunction_expr()
	{
		Enter_disjunction_expr();
		EnterRule("disjunction_expr", 3);
		TraceIn("disjunction_expr", 3);
		TigerParser.disjunction_expr_return retval = new TigerParser.disjunction_expr_return();
		retval.Start = (IToken)input.LT(1);

		CommonTree root_0 = null;

		IToken OR_OP5=null;
		TigerParser.conjunction_expr_return conjunction_expr4 = default(TigerParser.conjunction_expr_return);
		TigerParser.conjunction_expr_return conjunction_expr6 = default(TigerParser.conjunction_expr_return);

		CommonTree OR_OP5_tree=null;

		try { DebugEnterRule(GrammarFileName, "disjunction_expr");
		DebugLocation(239, 47);
		try
		{
			// C:\\Users\\Gustavo\\Desktop\\Tiger.g:240:2: ( conjunction_expr ( OR_OP conjunction_expr )* )
			DebugEnterAlt(1);
			// C:\\Users\\Gustavo\\Desktop\\Tiger.g:240:4: conjunction_expr ( OR_OP conjunction_expr )*
			{
			root_0 = (CommonTree)adaptor.Nil();

			DebugLocation(240, 4);
			PushFollow(Follow._conjunction_expr_in_disjunction_expr1178);
			conjunction_expr4=conjunction_expr();
			PopFollow();
			if (state.failed) return retval;
			if ( state.backtracking == 0 ) adaptor.AddChild(root_0, conjunction_expr4.Tree);
			DebugLocation(240, 21);
			// C:\\Users\\Gustavo\\Desktop\\Tiger.g:240:21: ( OR_OP conjunction_expr )*
			try { DebugEnterSubRule(1);
			while (true)
			{
				int alt1=2;
				try { DebugEnterDecision(1, decisionCanBacktrack[1]);
				int LA1_0 = input.LA(1);

				if ((LA1_0==OR_OP))
				{
					alt1=1;
				}


				} finally { DebugExitDecision(1); }
				switch ( alt1 )
				{
				case 1:
					DebugEnterAlt(1);
					// C:\\Users\\Gustavo\\Desktop\\Tiger.g:240:22: OR_OP conjunction_expr
					{
					DebugLocation(240, 27);
					OR_OP5=(IToken)Match(input,OR_OP,Follow._OR_OP_in_disjunction_expr1181); if (state.failed) return retval;
					if ( state.backtracking == 0 ) {
					OR_OP5_tree = (CommonTree)adaptor.Create(OR_OP5);
					root_0 = (CommonTree)adaptor.BecomeRoot(OR_OP5_tree, root_0);
					}
					DebugLocation(240, 29);
					PushFollow(Follow._conjunction_expr_in_disjunction_expr1184);
					conjunction_expr6=conjunction_expr();
					PopFollow();
					if (state.failed) return retval;
					if ( state.backtracking == 0 ) adaptor.AddChild(root_0, conjunction_expr6.Tree);

					}
					break;

				default:
					goto loop1;
				}
			}

			loop1:
				;

			} finally { DebugExitSubRule(1); }


			}

			retval.Stop = (IToken)input.LT(-1);

			if ( state.backtracking == 0 ) {

			retval.Tree = (CommonTree)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (CommonTree)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("disjunction_expr", 3);
			LeaveRule("disjunction_expr", 3);
			Leave_disjunction_expr();
		}
		DebugLocation(240, 47);
		} finally { DebugExitRule(GrammarFileName, "disjunction_expr"); }
		return retval;

	}
	// $ANTLR end "disjunction_expr"

	public class conjunction_expr_return : ParserRuleReturnScope<IToken>, IAstRuleReturnScope<CommonTree>
	{
		private CommonTree _tree;
		public CommonTree Tree { get { return _tree; } set { _tree = value; } }
	}

	partial void Enter_conjunction_expr();
	partial void Leave_conjunction_expr();

	// $ANTLR start "conjunction_expr"
	// C:\\Users\\Gustavo\\Desktop\\Tiger.g:242:1: conjunction_expr : relational_expr ( AND_OP relational_expr )* ;
	[GrammarRule("conjunction_expr")]
	private TigerParser.conjunction_expr_return conjunction_expr()
	{
		Enter_conjunction_expr();
		EnterRule("conjunction_expr", 4);
		TraceIn("conjunction_expr", 4);
		TigerParser.conjunction_expr_return retval = new TigerParser.conjunction_expr_return();
		retval.Start = (IToken)input.LT(1);

		CommonTree root_0 = null;

		IToken AND_OP8=null;
		TigerParser.relational_expr_return relational_expr7 = default(TigerParser.relational_expr_return);
		TigerParser.relational_expr_return relational_expr9 = default(TigerParser.relational_expr_return);

		CommonTree AND_OP8_tree=null;

		try { DebugEnterRule(GrammarFileName, "conjunction_expr");
		DebugLocation(242, 46);
		try
		{
			// C:\\Users\\Gustavo\\Desktop\\Tiger.g:243:2: ( relational_expr ( AND_OP relational_expr )* )
			DebugEnterAlt(1);
			// C:\\Users\\Gustavo\\Desktop\\Tiger.g:243:4: relational_expr ( AND_OP relational_expr )*
			{
			root_0 = (CommonTree)adaptor.Nil();

			DebugLocation(243, 4);
			PushFollow(Follow._relational_expr_in_conjunction_expr1197);
			relational_expr7=relational_expr();
			PopFollow();
			if (state.failed) return retval;
			if ( state.backtracking == 0 ) adaptor.AddChild(root_0, relational_expr7.Tree);
			DebugLocation(243, 20);
			// C:\\Users\\Gustavo\\Desktop\\Tiger.g:243:20: ( AND_OP relational_expr )*
			try { DebugEnterSubRule(2);
			while (true)
			{
				int alt2=2;
				try { DebugEnterDecision(2, decisionCanBacktrack[2]);
				int LA2_0 = input.LA(1);

				if ((LA2_0==AND_OP))
				{
					alt2=1;
				}


				} finally { DebugExitDecision(2); }
				switch ( alt2 )
				{
				case 1:
					DebugEnterAlt(1);
					// C:\\Users\\Gustavo\\Desktop\\Tiger.g:243:21: AND_OP relational_expr
					{
					DebugLocation(243, 27);
					AND_OP8=(IToken)Match(input,AND_OP,Follow._AND_OP_in_conjunction_expr1200); if (state.failed) return retval;
					if ( state.backtracking == 0 ) {
					AND_OP8_tree = (CommonTree)adaptor.Create(AND_OP8);
					root_0 = (CommonTree)adaptor.BecomeRoot(AND_OP8_tree, root_0);
					}
					DebugLocation(243, 29);
					PushFollow(Follow._relational_expr_in_conjunction_expr1203);
					relational_expr9=relational_expr();
					PopFollow();
					if (state.failed) return retval;
					if ( state.backtracking == 0 ) adaptor.AddChild(root_0, relational_expr9.Tree);

					}
					break;

				default:
					goto loop2;
				}
			}

			loop2:
				;
